feat: auth0 middleware
